Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-10142 PL/SQL parser
  3. MDEV-10579

sql_mode=ORACLE: Triggers: Understand :NEW.c1 and :OLD.c1 instead of NEW.c1 and OLD.c1

    XMLWordPrintable

Details

    Description

      When running in sql_mode=ORACLE, MariaDB should understand :NEW and :OLD as references to new and old row values in addition or instead of NEW and OLD without colon.

      DROP TABLE t1;
      CREATE TABLE t1 (a INT, b INT, c INT);
      DROP TRIGGER tr1;
      CREATE TRIGGER tr1 BEFORE INSERT ON t1
      FOR EACH ROW
      DECLARE
        cnt INT := 0;
      BEGIN
        IF :NEW.a IS NULL THEN cnt:=cnt+1; END IF;
        IF :NEW.b IS NULL THEN cnt:=cnt+1; END IF;
        IF :NEW.c IS NULL THEN :NEW.c:=cnt; END IF;
      END;
      /
      

      Attachments

        Activity

          People

            bar Alexander Barkov
            bar Alexander Barkov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 1h Original Estimate - 1h
                1h
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.75d
                0.75d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.